# RollingSignatures

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  currentImplementation.md
inc/: hmac_routing.h  hmac_routing_ops.h  packet.h  pkcertchain_config.h  rolling.h
inc/certifiicate/: certificate.h
inc/datatype/: OpStatus.h  uint256_t.h  uint512.h
inc/util/: EncUtils.h  LinuxUtils.h  SeedUtil.h  SignUtils.h  Size_Offsets.h  To_BO_BE_Pimitives.h  To_BO_Def_Primitives.h  WalletSetup.h  utilities.h
src/: main.c  rolling.c
tests/: test_hmac_routing.c  test_main.c  test_packet.c
